src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__Functions.snap
---
source: src/frontend/nameres/tests.rs
description: test_locals
expression: "test_nameres\n(r#\"\n            var b = 10; \n            func a(c) {\n                var d = b;\n            }\n        \"#)"
---
Ok(
    Do{
        VarDecl(b@0 = Int(10)[26,28])[18,28],
        VarDecl(a@0 = Function(c@0){
            VarDecl(d@0 = Var(b@0)[79,80])[71,80],
        }[48,54])[48,54],
    }[3,106],
)
