src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__Loops.snap
---
source: src/frontend/nameres/tests.rs
description: "Test: Loops\n──────────────────────────────────────────────────────────────────────────────────\nfor i in [1,2,3] {\n\tvar b = i\n}"
expression: test_nameres (& source)
info: test_locals
---
Ok(
    ResolvedAstNode {
        node: ForLoop {
            loop_var: 0,
            list: List[
                Int(1)[10:11],
                Int(2)[12:13],
                Int(3)[14:15],
            ][9:16],
            block: [
                Decl {
                    id: 1,
                    expr: Variable(0)[28:29],
                    is_global: false,
                }[20:29],
            ][17:31],
        }[4:18],
        global_count: 4,
        local_count: 2,
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "i",
            5: "b",
        },
        file_id: FileId(1),
    },
)
