src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__Scopes.snap
---
source: src/frontend/nameres/tests.rs
description: test_locals
expression: "test_nameres (_test_func! ({ var a = 10; do { var a = a; } }))"
---
Ok(
    ResolvedAstNode {
        node: Do {
            Decl {
                id: 0,
                expr: Int(10)[13,15],
                is_global: false,
            }[5,15],
            Result(
                Do {
                    Decl {
                        id: 1,
                        expr: Variable(0)[30,31],
                        is_global: false,
                    }[22,31],
                },
            )[20,34],
        }[3,36],
        global_count: 3,
        local_count: 2,
    },
)
