src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__Undefined variable usage.snap
---
source: src/frontend/nameres/tests.rs
description: test_locals
expression: "test_nameres (_test_func! ({var a = c;}))"
---
Err(
    UndefinedVar(
        IdentId(
            4,
        ),
    )[13,14],
)
