src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__Variable overloading.snap
---
source: src/frontend/nameres/tests.rs
description: test_locals
expression: "test_nameres (\"var a = 1; var a = 1; var a = 1; var b = a;\")"
---
Ok(
    ResolvedNode(
      global_count: 1,
      local_count: 4,
    ){
      DoBlock{
        Decl(
          id: 0,
          global: false
          expr: Int(1)[13,14]
        )[5,14];
        Decl(
          id: 1,
          global: false
          expr: Int(1)[24,25]
        )[16,25];
        Decl(
          id: 2,
          global: false
          expr: Int(1)[35,36]
        )[27,36];
        Decl(
          id: 3,
          global: false
          expr: Variable(id: 2, global: false)[46,47]
        )[38,47];
      }[3,50]
    },
)
