src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__Variable used outside scope.snap
---
source: src/frontend/nameres/tests.rs
description: "Test: Variable used outside scope\n──────────────────────────────────────────────────────────────────────────────────\ndo {\n\tvar a = 10;\n};\nvar b = a;"
expression: test_nameres (& source)
info: test_locals
---
Ok(
    ResolvedAstNode {
        node: Do {
            Decl {
                id: 0,
                expr: Int(10)[14:16],
                is_global: false,
            }[6:16],
        }[3:19],
        global_count: 4,
        local_count: 1,
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
        },
        file_id: FileId(1),
    },
)
