src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__class_literal.snap
---
source: src/frontend/nameres/tests.rs
description: "Test: class_literal\n──────────────────────────────────────────────────────────────────────────────────\nclass foo {var x; var b = 10;}"
expression: test_global_nameres (& source)
info: test_globals
---
Ok(
    ResolvedAst {
        proc: [
            ClassLit {
                name: Some(
                    IdentId(4)[6:9],
                ),
                fields: {
                    (
                        IdentId(5),
                        false,
                    ): Field {
                        default: None,
                        readonly: false,
                        name_span: 15:16,
                        modifier_span: 11:14,
                        private: false,
                    }[11:17],
                    (
                        IdentId(6),
                        false,
                    ): Field {
                        default: Some(
                            Int(10)[26:28],
                        ),
                        readonly: false,
                        name_span: 22:23,
                        modifier_span: 18:21,
                        private: false,
                    }[18:29],
                },
                methods: {},
            }[10:30],
        ],
        global_count: 4,
        local_count: 0,
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "foo",
            5: "x",
            6: "b",
        },
        file_id: FileId(1),
    },
)
