src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__class_literal_with_static_properties.snap
---
source: src/frontend/nameres/tests.rs
description: "Test: class_literal_with_static_properties\n──────────────────────────────────────────────────────────────────────────────────\nclass foo { static a = 10; static var b = 20; }"
expression: test_global_nameres (& source)
info: test_globals
---
Ok(
    ResolvedAst {
        proc: [
            ClassLit {
                name: Some(
                    IdentId(4)[6:9],
                ),
                fields: {
                    (
                        IdentId(5),
                        true,
                    ): Field {
                        default: Some(
                            Int(10)[23:25],
                        ),
                        readonly: true,
                        name_span: 19:20,
                        modifier_span: 12:18,
                        private: false,
                    }[12:26],
                    (
                        IdentId(6),
                        true,
                    ): Field {
                        default: Some(
                            Int(20)[42:44],
                        ),
                        readonly: false,
                        name_span: 38:39,
                        modifier_span: 27:37,
                        private: false,
                    }[27:45],
                },
                methods: {},
            }[10:47],
        ],
        global_count: 4,
        local_count: 0,
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "foo",
            5: "a",
            6: "b",
        },
        file_id: FileId(1),
    },
)
