src/frontend/nameres/snapshots/shlang__frontend__nameres__tests__class_method.snap
---
source: src/frontend/nameres/tests.rs
description: "Test: class_method\n──────────────────────────────────────────────────────────────────────────────────\nclass foo {\n\tfunc abc(a,b,c) {\n\t\treturn 10;\n\t}\n\tstatic func hello(foo) {\n\t\treturn foo;\n\t}\n\tlet x = 20;\n}"
expression: test_global_nameres (& source)
info: test_globals
---
Ok(
    ResolvedAst {
        proc: [
            ClassLit {
                name: Some(
                    IdentId(4)[6:9],
                ),
                fields: {
                    (
                        IdentId(10),
                        false,
                    ): Field {
                        default: Some(
                            Int(20)[99:101],
                        ),
                        readonly: true,
                        name_span: 95:96,
                        modifier_span: 91:94,
                        private: false,
                    }[91:102],
                },
                methods: {
                    (
                        IdentId(5),
                        false,
                    ): Method {
                        block: [
                            Return(
                                Int(10),
                            )[33:39],
                        ][29:46],
                        args: [
                            1,
                            2,
                            3,
                        ],
                        local_count: 0,
                        name_span: 18:21,
                        modifier_span: 13:17,
                        private: false,
                    }[13:54],
                    (
                        IdentId(9),
                        true,
                    ): Method {
                        block: [
                            Return(
                                Variable(1),
                            )[75:81],
                        ][71:89],
                        args: [
                            1,
                        ],
                        local_count: 0,
                        name_span: 60:65,
                        modifier_span: 48:54,
                        private: false,
                    }[48:94],
                },
            }[10:104],
        ],
        global_count: 4,
        local_count: 2,
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "foo",
            5: "abc",
            6: "a",
            7: "b",
            8: "c",
            9: "hello",
            10: "x",
        },
        file_id: FileId(1),
    },
)
